# Mushroom_Password

./: .gitignore  background.js  contentAnalyzer.js  key_file.key  main.py  manifest.json
.history/: contentAnalyzer_20250127135619.js  contentAnalyzer_20250219101325.js  contentAnalyzer_20250219101337.js  contentAnalyzer_20250219101511.js  contentAnalyzer_20250219101515.js  contentAnalyzer_20250219101518.js  contentAnalyzer_20250219101524.js  contentAnalyzer_20250219101530.js  contentAnalyzer_20250219101532.js  contentAnalyzer_20250219101542.js  contentAnalyzer_20250219101546.js  contentAnalyzer_20250219101550.js  contentAnalyzer_20250219101556.js  contentAnalyzer_20250219101558.js  contentAnalyzer_20250219101601.js  contentAnalyzer_20250219101610.js  contentAnalyzer_20250219101616.js  contentAnalyzer_20250219101619.js  contentAnalyzer_20250219101623.js  contentAnalyzer_20250219101625.js  contentAnalyzer_20250219101630.js  contentAnalyzer_20250219101631.js  contentAnalyzer_20250219101636.js  contentAnalyzer_20250219101650.js  contentAnalyzer_20250219101652.js  contentAnalyzer_20250219101655.js  contentAnalyzer_20250219101701.js  contentAnalyzer_20250219101726.js  contentAnalyzer_20250219101821.js  contentAnalyzer_20250219101838.js  contentAnalyzer_20250219101858.js  contentAnalyzer_20250219101859.js  contentAnalyzer_20250219101903.js  contentAnalyzer_20250219101904.js  (+44 more)
API/: key_file.key  (+8 more)
mushroom-password-manager/: Cargo.toml
mushroom-password-manager/src/: main.rs
mushroom-password-manager/src/api/: client.rs
mushroom-password-manager/src/ui/: app.rs  style.rs
(+198 files in other folders)
