[package]
name = "mushroom-password-manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Application de gestion sécurisée de mots de passe"

[dependencies]

# Interface utilisateur
iced = { version = "0.9", features = ["tokio", "debug"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Sérialisation/Désérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilitaires
chrono = "0.4.26"
log = "0.4.19"
env_logger = "0.10.0"
directories = "5.0.1"
thiserror = "1.0.40"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true